Fixed scrool homt title bottom

--- a/about.html
+++ b/about.html
@@ -102,14 +102,17 @@
                        <p>Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.</p>
                     </article>
                 </div>
-                <div class="col-md-6">
+                <div class="col-md-6 offset-md-3">
                     <img src="img/about-descrption-img.jpg" alt="description image">
                 </div>
                 <div class="col-md-6">
                      <article data-css-animate="trigger">
-                      
                        <h2 class="section-header">Vision</h2>
                        <p>Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. </p>
+                    </article>
+                </div>
+                <div class="col-md-6">
+                     <article data-css-animate="trigger">
                        <h2 class="section-header">Our Aim</h2>
                        <p>We are committed to serious and productive activities to attract investment capital into prospective projects. Based on the blokchain technology and our experience of doing business in Japan, we want to enable many startups to enter the Japanese investment market. Our success is measured only by the number of projects that are developing thanks to funds attracted in Japan via cloudfunding.</p>
                     </article>
@@ -133,10 +136,12 @@
     <section class="about-team">
         <div class="cj-container">
             <h2 class="section-header">Our Team</h2>
-            <div class="row team-members">
+            <div class="row no-gutters team-members">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
+                        <div class="team-member-photo">
+                            <img src="img/team-members/DSC_2913.jpg" alt="Satoshi Mishima">
+                        </div>
                         <h3 class="member-name">Satoshi Mishima</h3>
                         <h4 class="member-position">Founder</h4>
                         <article>
@@ -148,7 +153,9 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
+                        <div class="team-member-photo">
+                            <img src="img/team-members/DSC_2826.jpg" alt="Golodniy Sergei">
+                        </div>
                         <h3 class="member-name">Golodniy Sergei</h3>
                         <h4 class="member-position">Representative Director</h4>
                         <article>
@@ -161,7 +168,9 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <div class="team-member-photo" style="background-image: url('img/team-members/oleg-pavlichenko.jpg')"></div>
+                        <div class="team-member-photo">
+                            <img src="img/team-members/DSC_2894.jpg" alt="Oleh Pavlichenko">
+                        </div>
                         <h3 class="member-name">Oleh Pavlichenko</h3>
                         <h4 class="member-position">Executive Adviser</h4>
                         <article>
@@ -173,7 +182,9 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
+                        <div class="team-member-photo">
+                            <img src="img/team-members/DSC_2906.jpg" alt="Artem Timsun">
+                        </div>
                         <h3 class="member-name">Artem Timsun</h3>
                         <h4 class="member-position">Head of Communications</h4>
                         <article>
@@ -185,9 +196,11 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
-                        <h3 class="member-name">Vladimir Seferovblockchain</h3>
-                        <h4 class="member-position">Architect</h4>
+                        <div class="team-member-photo">
+                            <img src="img/team-members/DSC_2908.jpg" alt="Vladimir Seferovblockchain">
+                        </div>
+                        <h3 class="member-name">Vladimir Seferov</h3>
+                        <h4 class="member-position">Blockchain Architect</h4>
                         <article>
                             Master Degree in Economics, five years of experience in cryptomarkets, smart-contracts programmer, deep experience in tokens economy. 
                             Auditor of ICO projects in Coinjapan.
@@ -197,7 +210,9 @@
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger">
-                        <div class="team-member-photo" style="background-image: url('img/member-picture.png')"></div>
+                        <div class="team-member-photo">
+                            <img src="img/team-members/DSC_2903.jpg" alt="Medyanik Anastasiya">
+                        </div>
                         <h3 class="member-name">Medyanik Anastasiya</h3>
                         <h4 class="member-position">Office Manager</h4>
                         <article>
