Fixed scrool homt title bottom

--- a/about.html
+++ b/about.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="css/lib/owl.theme.default.min.css">
     <link rel="stylesheet" href="css/lib/animate.min.css">
     <link rel="stylesheet" href="css/lib/bootstrap.min.css">
-    <link rel="stylesheet" href="css/lib/fontawesome-all.min.css">
 
     <link rel="stylesheet" href="css/fonts.css">
     <link rel="stylesheet" href="css/common.css">
@@ -27,7 +26,6 @@
     <script type="text/javascript" src="js/lib/jquery.spincrement.min.js"></script>
     <script type="text/javascript" src="js/lib/jquery.gsap.min.js"></script>
     <script type="text/javascript" src="js/lib/TweenMax.min.js"></script>
-    <!-- <script type="text/javascript" src="js/lib/parallax.min.js"></script> -->
     <script type="text/javascript" src="js/lib/jquery.mousewheel.min.js"></script>
 
     <script type="text/javascript" src="js/particles.js"></script>
@@ -39,7 +37,6 @@
     <script type="text/javascript" src="js/menuHandler.js"></script>
     <script type="text/javascript" src="js/goToTop.js"></script>
     <script type="text/javascript" src="js/breadcrump.js"></script>
-    <!-- <script type="text/javascript" src="js/paralax.js"></script> -->
 </head>
 <body>
     <div class="cj-container">
@@ -94,132 +91,113 @@
     </section><!-- TITLE -->
 
     <section class="about-description">
+
         <div class="cj-container">
+
             <div class="row no-gutters">
                 <div class="col-12">
                     <article class="about-description-main-text">
-                         <h2>Who we are</h2>
+                       <h2>Who we are</h2>
                        <p>Coinjapan is a utility ICO and blockchain advisory company, headquartered in Tokyo, that combine efforts of open-minded professionals, which are passionate by blockchain technology, cryptomarket, and Japan. We have achieved success in various fields of activity earlier. Now we have joined our efforts to help the development of projects aimed at creating innovative, high-tech commercial and social products of the future based on blockchain technology.</p>
-                    </article>
-                </div>
-                <div class="col-md-6 offset-md-3">
-                    <img src="img/about-descrption-img.jpg" alt="description image">
-                </div>
-                <div class="col-md-6">
-                     <article data-css-animate="trigger">
-                       <h2 class="section-header">Vision</h2>
-                       <p>Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. </p>
-                    </article>
-                </div>
-                <div class="col-md-6">
-                     <article data-css-animate="trigger">
-                       <h2 class="section-header">Our Aim</h2>
-                       <p>We are committed to serious and productive activities to attract investment capital into prospective projects. Based on the blokchain technology and our experience of doing business in Japan, we want to enable many startups to enter the Japanese investment market. Our success is measured only by the number of projects that are developing thanks to funds attracted in Japan via cloudfunding.</p>
-                    </article>
-                </div>
-            </div>
-        </div>
-    </section><!-- DESCRIPTION -->
+                   </article>
+               </div>
 
-    
-<!-- 
-    <section class="about-sub-title">
-        <div class="cj-container">
-            <div class="cover-bg">
-                <img src="img/coinjapan-sub-logo.png" alt="CoinJapan">
-            </div>
-            <iframe class="about-video" style="overflow:hidden" src="https://www.youtube.com/embed/riMfIhIb8Rk?autoplay=1&controls=0&loop=1&&playlist=riMfIhIb8Rk&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" scrolling="no" allowfullscreen></iframe>
-        </div>
-    </section> -->
-    <!-- SUB-TITLE -->
+               <div class="col-md-6 offset-md-3">
+                <img src="img/about-descrption-img.jpg" alt="description image">
+            </div> 
+            <div class="col-md-6 about-description-text">
+               <article data-css-animate="trigger">
+                 <h2 class="section-header">Vision</h2>
+                 <p>Modern rules of business dictated by the transnational corporations have brought of the era of startups, created “in the garage” to the end but they did not stop the growth of ideas that can change the world. Coinjapan poses a challenge to the new game rules and chooses to the blockchain, cryptocurrency, and ICO. We open the Japanese investment market for any prospective project, regardless of its area utilization and stage of development. </p>
+             </article>
+         </div>
+         <div class="col-md-6 about-description-text">
+           <article data-css-animate="trigger">
+             <h2 class="section-header">Our Aim</h2>
+             <p>We are committed to serious and productive activities to attract investment capital into prospective projects. Based on the blokchain technology and our experience of doing business in Japan, we want to enable many startups to enter the Japanese investment market. Our success is measured only by the number of projects that are developing thanks to funds attracted in Japan via cloudfunding.</p>
+         </article>
+     </div>   
+ </div>
+</div>
+</section><!-- DESCRIPTION -->
 
     <section class="about-team">
         <div class="cj-container">
             <h2 class="section-header">Our Team</h2>
             <div class="row no-gutters team-members">
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member" data-css-animate="trigger">
+                    <div class="team-member" data-css-animate="trigger" data-team-member="detail">
                         <div class="team-member-photo">
                             <img src="img/team-members/DSC_2913.jpg" alt="Satoshi Mishima">
+                            <article>
+                                Continuous entrepreneur and battle-hardened Investor, captured by blockchain technology. In 2005, he was the youngest among the CEO honored with "500 CEO who will revolutionize Japan” award. For last ten years, he has been providing support for foreign companies, which want to make a successful business in the Japanese market. Now He is focused on building growth for blockchain ventures.
+                            </article>
                         </div>
                         <h3 class="member-name">Satoshi Mishima</h3>
                         <h4 class="member-position">Founder</h4>
-                        <article>
-                            Continuous entrepreneur and battle-hardened Investor, captured by blockchain technology. In 2005, he was the youngest among the CEO honored with "500 CEO who will revolutionize Japan” award. For last ten years, he has been providing support for foreign companies, which want to make a successful business in the Japanese market. Now He is focused on building growth for blockchain ventures.
-
-                            Motto: Your dream never runs away from you. You run away from your dream.
-                        </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member" data-css-animate="trigger">
+                    <div class="team-member" data-css-animate="trigger" data-team-member="detail">
                         <div class="team-member-photo">
                             <img src="img/team-members/DSC_2826.jpg" alt="Golodniy Sergei">
+                            <article>
+                                Successmarker, TroubleShooter, expert-coordinator of numerous transnational projects.
+                                His reach experience, excellent Japanese language skills and a keen passion to blockchain and cryptocurrency allows him to provide a bridge between Ukrainian companies and Japanese investors.
+                            </article>
                         </div>
                         <h3 class="member-name">Golodniy Sergei</h3>
                         <h4 class="member-position">Representative Director</h4>
-                        <article>
-                            Successmarker, TroubleShooter, expert-coordinator of numerous transnational projects.
-                            His reach experience, excellent Japanese language skills and a keen passion to blockchain and cryptocurrency allows him to provide a bridge between Ukrainian companies and Japanese investors.
-
-                            Motto: Never Give up!
-                        </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member" data-css-animate="trigger">
+                    <div class="team-member" data-css-animate="trigger" data-team-member="detail">
                         <div class="team-member-photo">
                             <img src="img/team-members/DSC_2894.jpg" alt="Oleh Pavlichenko">
+                            <article>
+                                Cosmopolitan with great desire to make a difference. He has been living in Japan more than 12 years and has a wide range of experience in the marketing and IT development fields. In the CoinJapan company he provides a digital marketing and localization of customers` projects.
+                            </article>
                         </div>
                         <h3 class="member-name">Oleh Pavlichenko</h3>
                         <h4 class="member-position">Executive Adviser</h4>
-                        <article>
-                            Cosmopolitan with great desire to make a difference. He has been living in Japan more than 12 years and has a wide range of experience in the marketing and IT development fields. In the CoinJapan company he provides a digital marketing and localization of customers` projects.
-
-                            Motto: Measure what is measurable, and make measurable what is not.
-                        </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member" data-css-animate="trigger">
+                    <div class="team-member" data-css-animate="trigger" data-team-member="detail">
                         <div class="team-member-photo">
                             <img src="img/team-members/DSC_2906.jpg" alt="Artem Timsun">
+                            <article>
+                                Video-producer and co-founder of the first Ukrainian online TV WaZZZup.TV, CEO of the SQS models and creative advertising agency MV Creative. Was the executive producer in the Debora, DataBase, and Dikosound companies. Now He is enthusiastic in blockchain technology and has conducted several successful PR campaigns for well-known blockchain projects and start-ups.
+                            </article>
                         </div>
                         <h3 class="member-name">Artem Timsun</h3>
                         <h4 class="member-position">Head of Communications</h4>
-                        <article>
-                            Video-producer and co-founder of the first Ukrainian online TV WaZZZup.TV, CEO of the models agency "SQS models" and creative advertising agency "MV Creative". He had experience on TV, Radio,  and artist managment fields, working together with famous Ukrainian stars like Oleg Skripka, Green Gray, and others. Was the executive producer in the Debora, DataBase, and Dikosound companies. Now He is enthusiastic in blockchain technology and has conducted several successful PR campaigns for well-known blockchain projects and start-ups.
 
-                            Motto: Here and Now!
-                        </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member" data-css-animate="trigger">
+                    <div class="team-member" data-css-animate="trigger" data-team-member="detail">
                         <div class="team-member-photo">
                             <img src="img/team-members/DSC_2908.jpg" alt="Vladimir Seferovblockchain">
+                            <article>
+                                Master Degree in Economics, five years of experience in cryptomarkets, smart-contracts programmer, deep experience in tokens economy. 
+                                Auditor of ICO projects in Coinjapan.
+                            </article>
                         </div>
                         <h3 class="member-name">Vladimir Seferov</h3>
                         <h4 class="member-position">Blockchain Architect</h4>
-                        <article>
-                            Master Degree in Economics, five years of experience in cryptomarkets, smart-contracts programmer, deep experience in tokens economy. 
-                            Auditor of ICO projects in Coinjapan.
-                            Motto: Concordia, Integritas, Industria.
-                        </article>
                     </div>
                 </div>
                 <div class="col-sm-12 col-md-6 col-lg-4">
-                    <div class="team-member" data-css-animate="trigger">
+                    <div class="team-member" data-css-animate="trigger" data-team-member="detail">
                         <div class="team-member-photo">
                             <img src="img/team-members/DSC_2903.jpg" alt="Medyanik Anastasiya">
+                            <article>
+                                BD in Oriental Studies, Japanese language translator in the field related to the blockchain technologies. Her Japanese language skills were improved for the years of living in sunny Okinawa. She gives preference to the exact sciences and is interesting in the problems of the radiation on living organisms and translating of the physical encyclopedia from the Japanese language.
+                            </article>
                         </div>
                         <h3 class="member-name">Medyanik Anastasiya</h3>
                         <h4 class="member-position">Office Manager</h4>
-                        <article>
-                            BD in Oriental Studies, Japanese language translator in the field related to the blockchain technologies. Her Japanese language skills were improved for the years of living in sunny Okinawa. She gives preference to the exact sciences and is interesting in the problems of the radiation on living organisms and translating of the physical encyclopedia from the Japanese language.
-
-                            Motto: The more I learn, the more I understand that I know nothing.
-                        </article>
                     </div>
                 </div>
             </div>
@@ -230,23 +208,23 @@
     <section class="bottom-links">
         <div class="cj-container background-color-grey">
             <div class="bottom-links-container">
-                <div class="services-link" data-css-animate="trigger">
-                 <a href="services.html">
-                    <img class="left-bottom-link-arrow" src="img/arrow-in-circle.png" alt="arrow in circle">
-                    <span>Services</span>
-                </a>
-            </div>
-            <div class="projects-link" data-css-animate="trigger">
-                <a href="projecs.html">
-                    <span>Projecs</span>
-                    <img src="img/arrow-in-circle.png" alt="arrow in circle">
-                </a>
-            </div>
-        </div>
-    </div>
-</section><!-- LINKS -->
+                <div class="link-item-wrapper" data-css-animate="trigger">
+                   <a href="services.html">
+                        <img src="img/DSC_3272.jpg" alt="A lamp">
+                        <span>Services</span>
+                   </a>
+                </div>
+                <div class="link-item-wrapper" data-css-animate="trigger">
+                    <a href="projecs.html">
+                        <img src="img/DSC_3244.jpg" alt="Toy">
+                        <span>Projects</span>
+                    </a>
+                </div>
+           </div>
+       </div>    
+   </section><!-- LINKS -->
 
-<footer class="footer">
+   <footer class="footer">
     <div class="footer-container">
         <div class="row">
             <div class="col-12">
