--- a/about.html
+++ b/about.html
@@ -123,7 +123,7 @@
 
     <section class="about-team">
         <div class="cj-container">
-            <h2 class="section-header">Our Team</h2>
+            <h2 class="section-header" data-css-animate="trigger">Our Team</h2>
             <div class="row no-gutters team-members">
                 <div class="col-sm-12 col-md-6 col-lg-4">
                     <div class="team-member" data-css-animate="trigger" data-team-member="detail">
@@ -210,13 +210,13 @@
             <div class="bottom-links-container">
                 <div class="link-item-wrapper" data-css-animate="trigger">
                    <a href="services.html">
-                        <img src="img/DSC_3272.jpg" alt="A lamp">
+                        <img src="img/links/DSC_3272.jpg" alt="A lamp">
                         <span>Services</span>
                    </a>
                 </div>
                 <div class="link-item-wrapper" data-css-animate="trigger">
                     <a href="projecs.html">
-                        <img src="img/DSC_3244.jpg" alt="Toy">
+                        <img src="img/links/DSC_3244.jpg" alt="Toy">
                         <span>Projects</span>
                     </a>
                 </div>
